; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/libpq/extr_pqcomm.c_socket_flush.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/libpq/extr_pqcomm.c_socket_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PqCommBusy = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @socket_flush to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @socket_flush() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @PqCommBusy, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %6

5:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %10

6:                                                ; preds = %0
  store i32 1, i32* @PqCommBusy, align 4
  %7 = call i32 @socket_set_nonblocking(i32 0)
  %8 = call i32 (...) @internal_flush()
  store i32 %8, i32* %2, align 4
  store i32 0, i32* @PqCommBusy, align 4
  %9 = load i32, i32* %2, align 4
  store i32 %9, i32* %1, align 4
  br label %10

10:                                               ; preds = %6, %5
  %11 = load i32, i32* %1, align 4
  ret i32 %11
}

declare dso_local i32 @socket_set_nonblocking(i32) #1

declare dso_local i32 @internal_flush(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
